java-gatherers: docs (guide §5, theory ch.7 with JEP 485 and transducers, okay-java page, jdk-compatibility, AGENTS JDK bullet); okay-delta pinned to a named JDK 21; spec results; changelog; sprint item landed
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01LZNspDq7ZU8TRfNoTnpRMD